--- a/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
+++ b/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
@@ -5,23 +5,27 @@ Mcu.Family=STM32L4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=TIM1
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB3 (JTDO-TRACESWO)
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA13 (JTMS-SWDIO)
+Mcu.Pin11=PA14 (JTCK-SWCLK)
+Mcu.Pin12=PB3 (JTDO-TRACESWO)
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA13 (JTMS-SWDIO)
-Mcu.Pin9=PA14 (JTCK-SWCLK)
-Mcu.PinsNb=12
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -71,6 +75,8 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA8.Signal=S_TIM1_CH1
+PA9.Signal=S_TIM1_CH2
 PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
 PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO-TRACESWO).Locked=true
@@ -175,10 +181,23 @@ RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
+TIM1.Period=10
+TIM1.Prescaler=8000 - 1
+TIM1.Pulse-PWM\ Generation1\ CH1=500 - 1
+TIM1.Pulse-PWM\ Generation2\ CH2=500 - 1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 isbadioc=false
