--- a/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
+++ b/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
@@ -1,55 +1,74 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_15
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,master
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,DMAContinuousRequests,EOCSelection,master,ContinuousConvMode,Overrun,OversamplingMode,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,OffsetNumber-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,OffsetNumber-13\#ChannelRegularConversion
 ADC1.NbrOfConversion=8
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-7\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-10\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-12\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-13\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC1.OversamplingMode=DISABLE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.Rank-4\#ChannelRegularConversion=5
-ADC1.Rank-5\#ChannelRegularConversion=6
-ADC1.Rank-6\#ChannelRegularConversion=7
-ADC1.Rank-7\#ChannelRegularConversion=8
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.Rank-10\#ChannelRegularConversion=5
+ADC1.Rank-11\#ChannelRegularConversion=6
+ADC1.Rank-12\#ChannelRegularConversion=7
+ADC1.Rank-13\#ChannelRegularConversion=8
+ADC1.Rank-8\#ChannelRegularConversion=3
+ADC1.Rank-9\#ChannelRegularConversion=4
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI2
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART2
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP1=DMA
+Mcu.IP10=USART2
+Mcu.IP11=USART3
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=12
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -80,35 +99,39 @@ Mcu.Pin30=PB6
 Mcu.Pin31=PB7
 Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=35
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.4.0
-MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=KTIR_4
+PA0.GPIO_Label=KTIR_5
 PA0.Signal=ADCx_IN5
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=KTIR_5
+PA1.GPIO_Label=KTIR_2
 PA1.Signal=ADCx_IN6
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
@@ -121,7 +144,7 @@ PA14\ (JTCK-SWCLK).Locked=true
 PA14\ (JTCK-SWCLK).Mode=Serial_Wire
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA15\ (JTDI).GPIOParameters=GPIO_Label
-PA15\ (JTDI).GPIO_Label=SONIC_IN
+PA15\ (JTDI).GPIO_Label=HC_ECHO
 PA15\ (JTDI).Signal=S_TIM2_CH1
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USB_UART_TX
@@ -140,7 +163,7 @@ PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=KTIR_6
+PA4.GPIO_Label=KTIR_4
 PA4.Signal=ADCx_IN9
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA5.GPIO_Label=LD2 [debug]
@@ -162,7 +185,7 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MOT_R_PWM
 PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=KTIR_7
+PB0.GPIO_Label=KTIR_3
 PB0.Signal=ADCx_IN15
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=NFC_SPI_SCK
@@ -186,14 +209,13 @@ PB6.GPIO_Label=MOT_L_DIR
 PB6.Locked=true
 PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SONIC_OUT
-PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB7.GPIO_Label=HC_TRIG
+PB7.Signal=S_TIM4_CH2
 PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=KTIR_0
+PC0.GPIO_Label=KTIR_7
 PC0.Signal=ADCx_IN1
 PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=KTIR_1
+PC1.GPIO_Label=KTIR_0
 PC1.Signal=ADCx_IN2
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=RPI_UART_TX
@@ -218,10 +240,10 @@ PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=KTIR_2
+PC2.GPIO_Label=KTIR_6
 PC2.Signal=ADCx_IN3
 PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=KTIR_3
+PC3.GPIO_Label=KTIR_1
 PC3.Signal=ADCx_IN4
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=MOT_R_DIR
@@ -259,8 +281,9 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADCFreq_Value=64000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_SYSCLK
+RCC.ADCFreq_Value=80000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
 RCC.APB1TimFreq_Value=80000000
@@ -276,7 +299,7 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
 RCC.LPUART1Freq_Value=80000000
@@ -335,12 +358,14 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM2_CH1.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM_Input_1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 SPI2.CalculateBaudRate=40.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
@@ -348,18 +373,20 @@ SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,OCPolarity_1,OCPolarity_2
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,OCPolarity_2,OCPolarity_1
 TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
-TIM1.Period=65535
-TIM1.Prescaler=0
-TIM1.Pulse-PWM\ Generation1\ CH1=0
-TIM1.Pulse-PWM\ Generation2\ CH2=0
-TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1
+TIM2.IPParameters=Period,Prescaler
+TIM2.Period=65535
+TIM2.Prescaler=80-1
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Pulse-PWM Generation2 CH2
+TIM4.Period=62500-1
+TIM4.Prescaler=80-1
+TIM4.Pulse-PWM\ Generation2\ CH2=10
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
@@ -368,8 +395,12 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-L476RG
 boardIOC=true
 isbadioc=false
