--- a/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
+++ b/Roboty_Mobilne-STM32_Code/Roboty_Mobilne-STM32_Code.ioc
@@ -96,21 +96,22 @@ Mcu.Pin28=PA15 (JTDI)
 Mcu.Pin29=PC10
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin30=PC11
-Mcu.Pin31=PB3 (JTDO-TRACESWO)
-Mcu.Pin32=PB6
-Mcu.Pin33=PB7
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin31=PC12
+Mcu.Pin32=PB3 (JTDO-TRACESWO)
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=39
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -236,6 +237,11 @@ PC11.GPIO_Label=RPI_UART_RX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=USART3_RX
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC12.GPIO_Label=START_STOP_BUTTON
+PC12.GPIO_PuPd=GPIO_PULLUP
+PC12.Locked=true
+PC12.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
